--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
+asgiref==3.7.2
+beautifulsoup4==4.12.2
+bootstrap4==0.1.0
 Django==3.2.6
+django-bootstrap4==23.2
+pytz==2023.3.post1
+soupsieve==2.5
+sqlparse==0.4.4
+typing_extensions==4.8.0
