CI/CD: update main (deploy jobs) #2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,8 @@ jobs:
     steps:
       - name: Deploy to Staging
         run: |
-            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
             docker pull alexeytozik/my-django-app:latest
-            docker run -d -p 8000:8000 my-django-app
+            docker run -d -p 8000:8000 alexeytozik/my-django-app
 
   deploy-production:
     needs: build
@@ -54,6 +53,5 @@ jobs:
     steps:
       - name: Deploy to Production
         run: |
-            docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
             docker pull alexeytozik/my-django-app:latest
-            docker run -d -p 8000:8000 my-django-app
+            docker run -d -p 8000:8000 alexeytozik/my-django-app
