--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,39 @@ services:
   mysql:
       image: mysql:8.0.30
       environment:
-        MYSQL_DATABASE: devops-monitoring
-        MYSQL_USER: admin
-        MYSQL_PASSWORD: admin
-        MYSQL_ROOT_PASSWORD: root
+        MYSQL_DATABASE: zabbix
+        MYSQL_USER: zabbix
+        MYSQL_PASSWORD: zabbix
+        MYSQL_ROOT_PASSWORD: zabbix
       ports:
         - "3307:3306"
       networks:
         - myappnet
 
+  zabbix_server:
+    image: zabbix/zabbix-server-mysql
+    environment:
+      - DB_SERVER_HOST=mysql
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=zabbix
+      - MYSQL_DATABASE=zabbix
+    ports:
+      - "10051:10051"
+    networks:
+      - myappnet
+
   zabbix_web:
     image: zabbix/zabbix-web-nginx-mysql
     environment:
       - DB_SERVER_HOST=mysql
-      - MYSQL_USER=admin
-      - MYSQL_PASSWORD=admin
-      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_USER=zabbix
+      - MYSQL_PASSWORD=zabbix
+      - MYSQL_DATABASE=zabbix
+      - MYSQL_ROOT_PASSWORD=zabbix
       - ZBX_SERVER_HOST=zabbix-server
+      - ZBX_SERVER_PORT=10051
     ports:
-      - "8081:80"
+      - "8082:8080"
     networks:
       - myappnet
       
